Update EDA with SQL.ipynb

--- a/EDA with SQL.ipynb
+++ b/EDA with SQL.ipynb
@@ -484,12 +484,12 @@
        "        <th>1</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>340</td>\n",
+       "        <td>2928.4</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(340,)]"
+       "[(2928.4,)]"
       ]
      },
      "execution_count": 17,
@@ -498,7 +498,7 @@
     }
    ],
    "source": [
-    "%sql select avg(payload_mass__kg_) from SPACEXTBL where booster_version like 'F9 v1.0%'"
+    "%sql select avg(payload_mass__kg_) from SPACEXTBL where booster_version = 'F9 v1.1'"
    ]
   },
   {
